# prompt-optimizer

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
Documents/Implementation/: IMPLEMENTATION_PLAN.md  SPRINT.md
app/: __init__.py  config.py  logging_config.py  main.py
app/api/: background.py  deps.py  routes_evaluation.py  routes_optimization.py  routes_progress.py  routes_prompts.py  routes_reports.py  routes_state.py  routes_testcases.py
app/core/: __init__.py  bootstrap.py  interfaces.py  registry.py
app/db/: __init__.py  client.py
app/implementations/: __init__.py  evaluation_steps.py  executor.py  graders.py  improver.py  json_evaluation_steps.py  json_graders.py  model_grader.py  ollama_executor.py  optimizer.py  prepare.py  simple_executors.py  summarizer.py  template_executor.py  tiktoken_grader.py  word_count_grader.py
app/llm/: __init__.py  base.py  claude_code.py  fake.py  ollama.py
app/models/: __init__.py  common.py  evaluation.py  optimization.py  prompt.py  test_case.py
app/services/: __init__.py  evaluator.py  optimizer.py  progress.py  summarizer.py
app/web/: __init__.py  routes.py
docker/: Dockerfile  docker-compose.yml
docs/: EXTENDING.md  RawSections.txt
tests/: conftest.py  fakes.py
tests/api/: test_prompts.py  test_runs.py  test_states.py  test_testcases.py
tests/integration/: test_cancellation.py  test_evaluator.py  test_optimizer.py
tests/unit/: test_json_evaluation_steps.py  test_json_graders.py  test_llm_runner_options.py  test_model_grader.py  test_models.py  test_registry.py  (+6 more)
(+47 files in other folders)
