[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-optimizer"
version = "0.1.0"
description = "Modular, extensible prompt optimization framework (FastAPI + MongoDB)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "motor>=3.4",
    "pymongo>=4.6",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1",
    "jsonschema>=4.21",
    "httpx>=0.27",
    "tiktoken>=0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "mongomock-motor>=0.0.29",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    # Domain models named TestCase* are not pytest test classes.
    "ignore::pytest.PytestCollectionWarning",
]
